RESOLVED FIXED109872
Inspector doesn't show rules from pluginsStyleSheet
https://bugs.webkit.org/show_bug.cgi?id=109872
Summary Inspector doesn't show rules from pluginsStyleSheet
Dean Jackson
Reported 2013-02-14 16:06:09 PST
The inspector doesn't collect the rules from the plugins style sheet.
Attachments
Patch (1.93 KB, patch)
2013-02-14 16:09 PST, Dean Jackson
darin: review+
Radar WebKit Bug Importer
Comment 1 2013-02-14 16:06:49 PST
Dean Jackson
Comment 2 2013-02-14 16:09:19 PST
Darin Adler
Comment 3 2013-02-14 16:44:28 PST
Comment on attachment 188446 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=188446&action=review > Source/WebCore/css/InspectorCSSOMWrappers.cpp:127 > + collectFromStyleSheetContents(m_styleSheetCSSOMWrapperSet, CSSDefaultStyleSheets::plugInsStyleSheet); No #ifdef needed?
Dean Jackson
Comment 4 2013-02-14 17:13:37 PST
Comment on attachment 188446 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=188446&action=review >> Source/WebCore/css/InspectorCSSOMWrappers.cpp:127 >> + collectFromStyleSheetContents(m_styleSheetCSSOMWrapperSet, CSSDefaultStyleSheets::plugInsStyleSheet); > > No #ifdef needed? Nope - these default stylesheets are always around (although possibly empty, and can have different content on different ports thanks to #ifdefs in CSSDefaultStyleSheets::ensureDefaultStyleSheetsForElement).
Dean Jackson
Comment 5 2013-02-14 17:22:15 PST
Note You need to log in before you can comment on or make changes to this bug.