Inspector doesn't show rules from pluginsStyleSheet https://bugs.webkit.org/show_bug.cgi?id=109872

Reviewed by Darin Adler.

Make sure getWrapperForRuleInSheets collects the rules
from CSSDefaultStyleSheets::plugInsStyleSheet.

Making a test for this is difficult because the rules in
this sheet only apply to snapshotted plugins at the moment,
which are disabled in DRT, and would require a fairly long
timeout in the test.

* css/InspectorCSSOMWrappers.cpp:
(WebCore::InspectorCSSOMWrappers::getWrapperForRuleInSheets):

Canonical link: https://commits.webkit.org/128159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142944 268f45cc-cd09-0410-ab3c-d52691b4dbfc